Слияние iso-sdk и QuasarInstall. v3.0

--- a/main/QuasarLinux/REV/modules/install
+++ b/main/QuasarLinux/REV/modules/install
@@ -6,7 +6,7 @@ express() {
     "$SCRIPT_DIR"/parted
     "$SCRIPT_DIR"/basepack
     regions
-    "$SCRIPT_DIR"/mirrorconfig.sh
+    #"$SCRIPT_DIR"/mirrorconfig.sh
     "$SCRIPT_DIR"/users.sh
     "$SCRIPT_DIR"/inst_pack
     "$SCRIPT_DIR"/bootloader
